--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/plugin-proposal-decorators": "^7.10.1",
     "babel-plugin-module-resolver": "^4.0.0",
-    "babel-preset-expo": "~8.1.0"
+    "babel-preset-expo": "~8.1.0",
+    "reactotron-react-native": "^5.0.0"
   },
   "private": true
 }
